Fix squished images in Mobile tab on desktop (#566)

--- a/client-app/src/desktop/tabs/mobile/MobileTab.scss
+++ b/client-app/src/desktop/tabs/mobile/MobileTab.scss
@@ -4,7 +4,7 @@
 
     img {
       margin: var(--xh-pad-px);
-      width: 300px;
+      max-width: 300px;
     }
   }
 
